--- a/master peice/CarWdriver/CarWdriver.html
+++ b/master peice/CarWdriver/CarWdriver.html
@@ -19,15 +19,14 @@
         <nav>
             <ul id="nav1">
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="#">Become A Renter</a></li>
                 <li class="active"><a href="/shop/shop.html">Book Now</a>
                     <i class="fa-solid fa-chevron-down" style="color: #000000; font-size: 0.7rem;"></i>
                     <ul class="drop-down">
                         <span><a href="/CarWdriver/CarWdriver.html">Car with Driver</a></span>
                     </ul>
                 </li>
-                <li><a href="#">About us</a></li>
-                <li id="contact"><a href="#">Contact us</a></li>
+                <li><a href="/About us/Aboutus.html">About us</a></li>
+                <li id="contact"><a href="/Contact Us/Contactus.html">Contact us</a></li>
                 <li id="addBtn"><a href="/signUp/signUp.html">Sign Up</a></li>
                 <li id="loginbtn"><a href="/login/login.html">Login</a></li>
             </ul>
@@ -89,8 +88,8 @@
                 <div class="show-col">
                     
                     <div class="searchBox">
-                        <input type="text" class="searchbar" id="searcher" placeholder="Search">
-                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <input id="search_bar" type="text" class="searchbar" placeholder="Search">
+                        <i onclick="search()" class="fa-solid fa-magnifying-glass"></i>
                     </div>
                 </div>
                     </div>
