--- a/master peice/Renter/renter.html
+++ b/master peice/Renter/renter.html
@@ -19,8 +19,8 @@
         <nav>
             <ul id="nav1">
                 <li class="active"><a href="renter.html">Dashboard</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a href="/About us/Aboutus.html">About us</a></li>
+                <li><a href="/Contact Us/Contactus.html">Contact us</a></li>
                 <li id="addBtn"><a href="/profile/profile.html">Profile</a></li>
                 <li><a href="#" onclick="logout()">Logout</a></li>
             </ul>
