--- a/master peice/About us/Aboutus.html
+++ b/master peice/About us/Aboutus.html
@@ -4,12 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Single Car</title>
-    <link rel="stylesheet" href="SingleCarWdriver.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="Aboutus.css">
     <script src="https://kit.fontawesome.com/62ed9ebe37.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </head>
 
 <body>
@@ -21,13 +18,13 @@
         <nav>
             <ul id="nav1">
                 <li><a href="/index.html">Home</a></li>
-                <li class="active"><a href="/shop/shop.html">Book Now</a>
+                <li><a href="/shop/shop.html">Book Now</a>
                     <i class="fa-solid fa-chevron-down" style="color: #000000; font-size: 0.7rem;"></i>
                     <ul class="drop-down">
                         <span><a href="/CarWdriver/CarWdriver.html">Car with Driver</a></span>
                     </ul>
                 </li>
-                <li><a href="/About us/Aboutus.html">About us</a></li>
+                <li class="active"><a href="/About us/Aboutus.html">About us</a></li>
                 <li id="contact"><a href="/Contact Us/Contactus.html">Contact us</a></li>
                 <li id="addBtn"><a href="/signUp/signUp.html">Sign Up</a></li>
                 <li id="loginbtn"><a href="/login/login.html">Login</a></li>
@@ -37,61 +34,82 @@
         <i class="fa-solid fa-bars" id="menu" style="color: #000000;"></i>
     </header>
     <!-- end header           -->
-    
-    <!-- section single product -->
-    <section id="car_info">
 
-        <div class="singleimg">
-        <div id="driver">
-            
+    <!-- shop home section start -->
+    <div class="inventory">
+        <h2>About Us</h2>
+        <div class="link">
+            <a href="../index.html">Home</a>
+            <span>>>></span>
+            <p>About Us</p>
         </div>
-            <img src="" alt="Car" id="carImage">
+    </div>
+    <!-- end home section  -->
+    <!-- about us -->
+    <section class="section-p1" id="about1">
+        <div>
+            <h2 style="font-size: 60px;margin-bottom: 8%;">About Lynx Rides</h2>
+            <p>Welcome to Lynex Rides! We offer two convenient options: explore the road on your terms with our
+                self-drive rentals or sit back and relax with our chauffeur-driven service. Our diverse fleet is
+                meticulously maintained for your comfort and safety. Experience the freedom of choice and quality
+                service at Lynex Rides, where every journey is tailored to your preferences. Your adventure starts here!
+            </p>
+            <a href="contact.html"><button class="viewBtn">contact us </button></a>
         </div>
-        <div class="information">
-            <h2 id="carName">Audi A22</h2>
-            <div>
-                <label for="rentalDate">Rental Date</label>
-                <input type="date" placeholder="Enter RentalDate" id="rentalDate" >
-            </div>
-            <div>
-                <label for="returnDate">Return Date</label>
-                <input type="date" placeholder="Enter ReturnDate"  id="returnDate" >
-            </div>
-            <div class="informations" id="carDetails">
-                <!-- Car details will be populated here -->
-            </div>
-            <div class="price">
-                <div>
-                    <h3>Price</h3>
-                </div>
-                <div>
-                    <p><span class="cost" id="pricePerDay">100.00</span>/Day</p>
-                </div>
-            </div>
-            <div>
-                <a href=""><button id="submit">Confirm Rent</button></a>
-            </div>
+        <div><img src="/img/logo/lynx22-removebg-preview.png" width="650" alt=""></div>
+    </section>
+    <section id="about-head" class="section-p1">
+        <img src="/img/arrivals/10.png" alt="">
+        <div>
+            <h2>Why Lynx Rides?</h2>
+            <p>
+                Lynex Rides stands out for its commitment to providing a seamless and personalized car rental
+                experience. With a diverse fleet of meticulously maintained vehicles, we offer the flexibility of
+                self-drive adventures or the convenience of chauffeur-driven service. Our customer-centric approach
+                ensures satisfaction, while our quality fleet guarantees a smooth and safe ride. Choose Lynex Rides for
+                a journey tailored to your preferences, where every mile is driven by excellence.</p>
         </div>
     </section>
-    <!-- end section single product -->
-    <section id="comment">
-        <h2>comments</h2>
-        <div class="container mt-1 mb-1 " id="comments">
-            <div class="d-flex justify-content-center row">
-                <div class="d-flex flex-column col-md-8">
-                    <div class="coment-bottom bg-white p-2 px-4">
-                        <div class="d-flex flex-row add-comment-section mt-4 mb-4"><input id="commentInput" type="text"
-                                class="form-control mr-5" placeholder="Add comment"><button onclick="postComment()" id="commentButton"
-                                class="btn btn-danger" type="button">Comment</button></div>
-                        <div class="commented-section mt-2" id="commentSection">
-                            <!-- comments here -->
-                        </div>
+    <section class="section-p1" id="test">
+        <h2 style="margin-bottom: 7%;">Client Testimonial</h2>
+        <div class="testimonial-container">
+            <div class="testimonial">
+                <img src="/img/client/05.jpg" alt="Client 1">
+                <h3>John Doe</h3>
+                <p>"Lynex Rides transformed my road trip with the perfect blend of freedom and a diverse,
+                    well-maintained fleet!"</p>
+            </div>
 
-                    </div>
-                </div>
+            <div class="testimonial">
+                <img src="/img/client/02.jpg" alt="Client 2">
+                <h3>Jane Smith</h3>
+                <p>"For business travel, Lynex Rides is my top choice professional chauffeurs and a quality fleet ensure
+                    a seamless journey."</p>
+            </div>
+
+            <div class="testimonial">
+                <img src="/img/client/04.jpg" alt="Client 3">
+                <h3>Alice Johnson</h3>
+                <p>"Our family vacation became stress-free and memorable, thanks to Lynex Rides' comfortable vehicles
+                    and expert chauffeurs."</p>
             </div>
         </div>
+
     </section>
+    <section class="section-p1" id="shop">
+        <h2>Rent Now!</h2>
+        <h3>
+            Unlock Your Journey – Rent Now with Lynex Rides for a Seamless and Unforgettable Ride!
+        </h3>
+        <p>Ready to Roll? Dive into the Lynex Rides Experience - Rent Now and Drive or Relax with Ease!</p>
+        <div>
+            <a href="/shop/shop.html"><button class="viewBtn">Rent Car</button></a>
+            <a href="/CarWdriver/CarWdriver.html"><button class="viewBt">With Driver!</button></a>
+        </div>
+    </section>
+
+    <!-- end about us -->
+
     <!-- footer section start -->
     <section class="footer">
         <div class="footer-row">
@@ -138,8 +156,8 @@
             <i class="fa-brands fa-youtube"></i>
         </div>
     </div>
+    <script src="about.js"></script>
     <script src="/Rolecheck.js"></script>
-    <script src="SingleCarWdriver.js"></script>
 </body>
 
 </html>
