--- a/master peice/SingleCar/SingleCar.html
+++ b/master peice/SingleCar/SingleCar.html
@@ -21,15 +21,14 @@
         <nav>
             <ul id="nav1">
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="#">Become A Renter</a></li>
                 <li class="active"><a href="/shop/shop.html">Book Now</a>
                     <i class="fa-solid fa-chevron-down" style="color: #000000; font-size: 0.7rem;"></i>
                     <ul class="drop-down">
                         <span><a href="/CarWdriver/CarWdriver.html">Car with Driver</a></span>
                     </ul>
                 </li>
-                <li><a href="#">About us</a></li>
-                <li id="contact"><a href="#">Contact us</a></li>
+                <li><a href="/About us/Aboutus.html">About us</a></li>
+                <li id="contact"><a href="/Contact Us/Contactus.html">Contact us</a></li>
                 <li id="addBtn"><a href="/signUp/signUp.html">Sign Up</a></li>
                 <li id="loginbtn"><a href="/login/login.html">Login</a></li>
             </ul>
