--- a/master peice/login/login.html
+++ b/master peice/login/login.html
@@ -16,7 +16,6 @@
         <nav>
             <ul id="nav1">
                 <li ><a href="/index.html">Home</a></li>
-                <li><a href="#">Become A Renter</a></li>
                 <li><a href="/shop/shop.html">Book Now</a>
                     <i class="fa-solid fa-chevron-down" style="color: #000000; font-size: 0.7rem;"></i>
                     <ul class="drop-down">
@@ -24,8 +23,8 @@
                         <span><a href="/CarWdriver/CarWdriver.html">Car with Driver</a></span>
                     </ul>
                 </li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a href="/About us/Aboutus.html">About us</a></li>
+                <li><a href="/Contact Us/Contactus.html">Contact us</a></li>
                 <li id="addBtn"><a href="/signUp/signUp.html">Sign Up</a></li>
                 <li class="active"><a href="/login/login.html">Login</a></li>
             </ul>
@@ -56,9 +55,6 @@
         <div class="login-error" id="loginError"></div>
     </div>
     </section>
-
-<a href="/admin2/admin/Salls/index.html"></a>
-
     <script src="login.js"></script>
 </body>
 </html>
