--- a/master peice/admin2/admin/users/edit4.html
+++ b/master peice/admin2/admin/users/edit4.html
@@ -87,7 +87,7 @@
                         <input type="email" name="email" id="email" class="text-input">
                     </div>
                     <div>
-                        <button type="submit" class="btn btn-big">Update</button>
+                       <a href="/admin2/admin/users/index.html"> <button type="submit" class="btn btn-big">Update</button></a>
                     </div>
                 </form>
 
