--- a/master peice/index.html
+++ b/master peice/index.html
@@ -28,8 +28,8 @@
                 </li>
                 <li><a href="#about">About us</a></li>
                 <li id="contact"><a href="#">Contact us</a></li>
-                <li id="addBtn"><a href="/signUp/signUp.html">Sign Up</a></li>
-                <li id="loginbtn"><a href="/login/login.html">Login</a></li>
+                <li id="addBtn"><a href="signUp/signUp.html">Sign Up</a></li>
+                <li id="loginbtn"><a href="login/login.html">Login</a></li>
             </ul>
             <a href="/Renter/renter.html"></a>
         </nav>
