last add inshallah

--- a/master peice/About us/Aboutus.html
+++ b/master peice/About us/Aboutus.html
@@ -62,7 +62,7 @@
         <img src="/img/arrivals/10.png" alt="">
         <div>
             <h2>Why Lynx Rides?</h2>
-            <p>
+            <p class="why">
                 Lynex Rides stands out for its commitment to providing a seamless and personalized car rental
                 experience. With a diverse fleet of meticulously maintained vehicles, we offer the flexibility of
                 self-drive adventures or the convenience of chauffeur-driven service. Our customer-centric approach
@@ -114,9 +114,9 @@
     <section class="footer">
         <div class="footer-row">
             <div class="footer-col">
-                <img src="../img/logo/lynx22-removebg-preview.png" alt="">
-                <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse excepturi
-                    ducimus quasi mollitia minima harum!</p>
+                <img src="../img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
+                <p class="text">Seamless rentals, your way. Rent a car or elevate your experience with a chauffeur –
+                    enjoy the journey, stress-free.</p>
                 <span><i class="fa-solid fa-phone"></i>+962 78 967 1075</span>
                 <span><i class="fa-solid fa-location-dot"></i>123D al-Salt, Jordan</span>
                 <span><i class="fa-regular fa-envelope"></i>info@gmail.com</span>
