--- a/master peice/index.html
+++ b/master peice/index.html
@@ -14,7 +14,7 @@
     <!-- nav bar-section -->
     <header class="header">
         <div class="logo">
-            <img src="./img/logo/lynx22-removebg-preview.png" alt="">
+           <a href="/index.html"><img src="./img/logo/lynx22-removebg-preview.png" alt=""></a>
         </div>
         <nav>
             <ul id="nav1">
@@ -25,8 +25,8 @@
                         <span><a href="/CarWdriver/CarWdriver.html">Car with Driver</a></span>
                     </ul>
                 </li>
-                <li><a href="#about">About us</a></li>
-                <li id="contact"><a href="#">Contact us</a></li>
+                <li><a href="/About us/Aboutus.html">About us</a></li>
+                <li id="contact"><a href="/Contact Us/Contactus.html">Contact us</a></li>
                 <li id="addBtn"><a href="/signUp/signUp.html">Sign Up</a></li>
                 <li id="loginbtn"><a href="/login/login.html">Login</a></li>
             </ul>
@@ -45,11 +45,11 @@
                         <p>Seamless rentals, your way. Rent a car or elevate your experience with a chauffeur – enjoy
                             the journey, stress-free.</p>
                         <div class="buttons">
-                            <a href="#"><button type="submit" class="AboutUs"><i
-                                        class="fa-solid fa-arrow-right"></i>About Us
-                                </button></a>
-                            <a href="/shop/shop.html"><button type="submit" class="Shop"><i
+                            <a href="/shop/shop.html"><button type="submit" class="AboutUs"><i
                                         class="fa-solid fa-arrow-right"></i>Rent a Car!</button></a>
+                            <a href="/CarWdriver/CarWdriver.html"><button type="submit" class="Shop"><i
+                                        class="fa-solid fa-arrow-right"></i>With Driver
+                                </button></a>
                         </div>
                     </div>
                     <div class="col-2">
@@ -129,8 +129,9 @@
             <p class="text">Premium cars, tailored options—seamless travel for your every journey.</p>
             <p class="p1"><i class="fa-solid fa-forward-step"></i>Rent a car for self-driven freedom.</p>
             <p class="p1"><i class="fa-solid fa-forward-step"></i>Indulge in chauffeur-driven luxury.</p>
-            <p class="p1"><i class="fa-solid fa-forward-step"></i>Experience convenience on your terms.</p>
-            <a href="/CarWdriver/CarWdriver.html"><button>Rent Car with driver <i class="fa-solid fa-arrow-right"></i></button></a>
+            <p class="p1"><i class="fa-solid fa-forward-step"></i>Sign up and start Earn Money!.</p>
+            <a href="/signUp/signUp.html"><button>Earn money! <i
+                        class="fa-solid fa-arrow-right"></i></button></a>
         </div>
     </section>
     <!--  counter section -->
@@ -153,9 +154,9 @@
     <section class="footer">
         <div class="footer-row">
             <div class="footer-col">
-                <img src="./img/logo/lynx22-removebg-preview.png" alt="">
-                <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse excepturi
-                    ducimus quasi mollitia minima harum!</p>
+                <img src="./img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
+                <p class="text">Seamless rentals, your way. Rent a car or elevate your experience with a chauffeur –
+                    enjoy the journey, stress-free.</p>
                 <span><i class="fa-solid fa-phone"></i>+962 78 967 1075</span>
                 <span><i class="fa-solid fa-location-dot"></i>123D al-Salt, Jordan</span>
                 <span><i class="fa-regular fa-envelope"></i>info@gmail.com</span>
