--- a/master peice/signUp/privacypolicy.html
+++ b/master peice/signUp/privacypolicy.html
@@ -325,7 +325,7 @@ If you live in the United States (excluding California), this section applies to
 In addition to the ones listed earlier in this Privacy Statement, the categories of personal data we may collect about you include:
 
 A. Geolocation data (i.e. your physical location)
-B. Sensitive data (citizenship or immigration status, data revealing your racial, ethnic origin, religious beliefs, mental or physical health diagnosis or sexual orientation - if provided by you
+B. Sensitive data (citizenship or )immigration status, data revealing your racial, ethnic origin, religious beliefs, mental or physical health diagnosis or sexual orientation - if provided by you
 C. Inferences (e.g. analytics and preferences)
 If you would like more information about these categories, the specific types of personal data we collect, or the purposes for which we collect them, please read the sections of our Privacy Statement titled “Personal data you give us”, “Personal data we collect automatically”, “Personal data we get from other companies" and "Why do we collect and use your personal data?".
 
@@ -431,7 +431,6 @@ If you live in Japan, this section applies to you (along with the rest of this P
 It describes how we use and process your personal data, and explains your particular rights under Japanese law - specifically, the ‘Act on the Protection of Personal Information’ (APPI).
 
 If there’s a mismatch between any provision in this section and any provision in another part of this Privacy Statement, the provision in this section will determine how we process your personal data if you live in Japan.
-
 Sensitive personal information
 ‘Sensitive personal information’ is any personal information that can be the basis for discrimination or prejudice. When using Rentalcars.com’s services, sensitive information may be collected by Rentalcars.com or a third party. For example, when making a booking, you might disclose information about a disability you have.
 
