--- a/master peice/signUp/signUp.html
+++ b/master peice/signUp/signUp.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="../img/logo/lynx22-removebg-preview.png" alt="">
+            <a href="/index.html"><img src="./img/logo/lynx22-removebg-preview.png" alt=""></a>
         </div>
         <nav>
             <ul id="nav1">
@@ -64,6 +64,12 @@
                     <input type="checkbox" id="ageCheckbox" name="ageCheckbox" required>
                     <label for="ageCheckbox">I am above 18 years old</label>
                 </div>
+
+                <div class="checkbox-label">
+                    <input type="checkbox" id="PrivacyCheckbox" name="PrivacyCheckbox" required>
+                    <label for="PrivacyCheckbox">I agree to the <a id="privacy" href="privacypolicy.html">terms & conditions</a></label>
+                </div>
+
                 <div class="user-type">
                     <div>
                         
