--- a/master peice/SingleCarWdriver/SingleCarWdriver.html
+++ b/master peice/SingleCarWdriver/SingleCarWdriver.html
@@ -9,14 +9,14 @@
     <script src="https://kit.fontawesome.com/62ed9ebe37.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </head>
 
 <body>
     <!-- nav bar-section -->
     <header class="header">
         <div class="logo">
-            <img src="../img/logo/lynx22-removebg-preview.png" alt="">
+            <a href="/index.html"><img src="./img/logo/lynx22-removebg-preview.png" alt=""></a>
         </div>
         <nav>
             <ul id="nav1">
@@ -37,25 +37,25 @@
         <i class="fa-solid fa-bars" id="menu" style="color: #000000;"></i>
     </header>
     <!-- end header           -->
-    
+
     <!-- section single product -->
     <section id="car_info">
 
         <div class="singleimg">
-        <div id="driver">
-            
-        </div>
+            <div id="driver">
+
+            </div>
             <img src="" alt="Car" id="carImage">
         </div>
         <div class="information">
             <h2 id="carName">Audi A22</h2>
             <div>
                 <label for="rentalDate">Rental Date</label>
-                <input type="date" placeholder="Enter RentalDate" id="rentalDate" >
+                <input type="date" placeholder="Enter RentalDate" id="rentalDate">
             </div>
             <div>
                 <label for="returnDate">Return Date</label>
-                <input type="date" placeholder="Enter ReturnDate"  id="returnDate" >
+                <input type="date" placeholder="Enter ReturnDate" id="returnDate">
             </div>
             <div class="informations" id="carDetails">
                 <!-- Car details will be populated here -->
@@ -81,8 +81,8 @@
                 <div class="d-flex flex-column col-md-8">
                     <div class="coment-bottom bg-white p-2 px-4">
                         <div class="d-flex flex-row add-comment-section mt-4 mb-4"><input id="commentInput" type="text"
-                                class="form-control mr-5" placeholder="Add comment"><button onclick="postComment()" id="commentButton"
-                                class="btn btn-danger" type="button">Comment</button></div>
+                                class="form-control mr-5" placeholder="Add comment"><button onclick="postComment()"
+                                id="commentButton" class="btn btn-danger" type="button">Comment</button></div>
                         <div class="commented-section mt-2" id="commentSection">
                             <!-- comments here -->
                         </div>
@@ -96,9 +96,9 @@
     <section class="footer">
         <div class="footer-row">
             <div class="footer-col">
-                <img src="../img/logo/lynx22-removebg-preview.png" alt="">
-                <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse excepturi
-                    ducimus quasi mollitia minima harum!</p>
+                <img src="../img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
+                <p class="text">Seamless rentals, your way. Rent a car or elevate your experience with a chauffeur –
+                    enjoy the journey, stress-free.</p>
                 <span><i class="fa-solid fa-phone"></i>+962 78 967 1075</span>
                 <span><i class="fa-solid fa-location-dot"></i>123D al-Salt, Jordan</span>
                 <span><i class="fa-regular fa-envelope"></i>info@gmail.com</span>
