--- a/master peice/profile/OrdersRenter/OrdersRenter.html
+++ b/master peice/profile/OrdersRenter/OrdersRenter.html
@@ -13,12 +13,12 @@
     <!-- header section start -->
     <header class="header">
         <div class="logo">
-            <img src="/img/logo/lynx22-removebg-preview.png" alt="">
+            <a href="/index.html"><img src="./img/logo/lynx22-removebg-preview.png" alt=""></a>
         </div>
         <nav>
             <ul id="nav1">
-                <li class="active"><a href="/index.html">Home</a></li>
-                <li><a href="/shop/shop.html">Book Now</a>
+                <li><a href="/index.html">Home</a></li>
+                <li class="active"><a href="/shop/shop.html">Book Now</a>
                     <i class="fa-solid fa-chevron-down" style="color: #000000; font-size: 0.7rem;"></i>
                     <ul class="drop-down">
                         <span><a href="/CarWdriver/CarWdriver.html">Car with Driver</a></span>
@@ -41,21 +41,21 @@
         </div>
         <div class="admin-content">
             <div class="content" id="rentsContainer">
-                
+
                 <!-- Add more cards as needed -->
             </div>
         </div>
     </div>
-    
+
 
     <!-- end orders -->
     <!-- footer section start -->
     <section class="footer">
         <div class="footer-row">
             <div class="footer-col">
-                <img src="/img/logo/lynx22-removebg-preview.png" alt="">
-                <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse excepturi
-                    ducimus quasi mollitia minima harum!</p>
+                <img src="/img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
+                <p class="text">Seamless rentals, your way. Rent a car or elevate your experience with a chauffeur –
+                    enjoy the journey, stress-free.</p>
                 <span><i class="fa-solid fa-phone"></i>+962 78 967 1075</span>
                 <span><i class="fa-solid fa-location-dot"></i>123D al-Salt, Jordan</span>
                 <span><i class="fa-regular fa-envelope"></i>info@gmail.com</span>
