--- a/master peice/profile/profile.html
+++ b/master peice/profile/profile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,12 @@
     <link rel="stylesheet" href="profile.css">
     <script src="https://kit.fontawesome.com/62ed9ebe37.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <!-- header section start -->
     <header class="header">
         <div class="logo">
-            <img src="../img/logo/lynx22-removebg-preview.png" alt="">
+            <a href="/index.html"><img src="./img/logo/lynx22-removebg-preview.png" alt=""></a>
         </div>
         <nav>
             <ul id="nav1">
@@ -33,45 +35,41 @@
     </header>
     <!-- header section end -->
 
-     <!-- profile section start -->
-     <div class="profile-container">
+    <!-- profile section start -->
+    <div class="profile-container">
         <div class="profile-picture">
-          <img
-            id="profileImage"
-            src="../img/team/t-2.jpg"
-            alt="User Profile Picture"
-          />
+            <img id="profileImage" src="../img/team/t-2.jpg" alt="User Profile Picture" />
         </div>
         <div class="profile-info">
             <p name="type" id="UserType"><strong>Type:</strong>Renter</p>
-          <p name="username" id="username"><strong>Username:</strong> Muneer ahmad</p>
-          <p name="phoneNumber" id="phoneNumber"><strong>phoneNumber:</strong>0798741235</p>
-          <p name="email" id="email"><strong>Email:</strong> Muneer@example.com</p>
-          <p name="password" id="password"><strong>password:</strong>******</p>
+            <p name="username" id="username"><strong>Username:</strong> Muneer ahmad</p>
+            <p name="phoneNumber" id="phoneNumber"><strong>phoneNumber:</strong>0798741235</p>
+            <p name="email" id="email"><strong>Email:</strong> Muneer@example.com</p>
+            <p name="password" id="password"><strong>password:</strong>******</p>
         </div>
         <div class="edit-button">
-          <button>
-            <a href="edit.html">Edit Information</a>
-          </button>
-          <button onclick="orders()" id="order">
-            Your Orders
-          </button>
+            <button>
+                <a href="edit.html">Edit Information</a>
+            </button>
+            <button onclick="orders()" id="order">
+                Your Orders
+            </button>
         </div>
-      </div>
-     <!-- profile section end -->
+    </div>
+    <!-- profile section end -->
 
 
 
-      <!-- footer section start -->
+    <!-- footer section start -->
     <section class="footer">
         <div class="footer-row">
             <div class="footer-col">
-                <img src="../img/logo/lynx22-removebg-preview.png" alt="">
-                <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse excepturi
-                    ducimus quasi mollitia minima harum!</p>
-                  <span><i class="fa-solid fa-phone"></i>+962 78 967 1075</span>
-                  <span><i class="fa-solid fa-location-dot"></i>123D al-Salt, Jordan</span>
-                  <span><i class="fa-regular fa-envelope"></i>info@gmail.com</span>
+                <img src="/img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
+                <p class="text">Seamless rentals, your way. Rent a car or elevate your experience with a chauffeur –
+                    enjoy the journey, stress-free.</p>
+                <span><i class="fa-solid fa-phone"></i>+962 78 967 1075</span>
+                <span><i class="fa-solid fa-location-dot"></i>123D al-Salt, Jordan</span>
+                <span><i class="fa-regular fa-envelope"></i>info@gmail.com</span>
             </div>
             <div class="footer-col">
                 <h5>Quick Links</h5>
@@ -111,4 +109,5 @@
     <script src="/Rolecheck.js"></script>
     <script src="profile.js"></script>
 </body>
+
 </html>
