--- a/master peice/SingleCar/SingleCar.html
+++ b/master peice/SingleCar/SingleCar.html
@@ -16,7 +16,7 @@
     <!-- nav bar-section -->
     <header class="header">
         <div class="logo">
-            <a href="/index.html"><img src="./img/logo/lynx22-removebg-preview.png" alt=""></a>
+            <a href="/index.html"><img src="/img/logo/lynx22-removebg-preview.png" alt=""></a>
         </div>
         <nav>
             <ul id="nav1">
@@ -92,7 +92,7 @@
     <section class="footer">
         <div class="footer-row">
             <div class="footer-col">
-                <a href="/index.html"><img src="./img/logo/lynx22-removebg-preview.png" alt=""></a>
+                <a href="/index.html"><img src="/img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt=""></a>
                 <p class="text">Seamless rentals, your way. Rent a car or elevate your experience with a chauffeur –
                     enjoy the journey, stress-free.</p>
                 <span><i class="fa-solid fa-phone"></i>+962 78 967 1075</span>
