--- a/master peice/login/login.html
+++ b/master peice/login/login.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <a href="/index.html"><img src="./img/logo/lynx22-removebg-preview.png" alt=""></a>
+            <a href="/index.html"><img src="/img/logo/lynx22-removebg-preview.png" alt=""></a>
         </div>
         <nav>
             <ul id="nav1">
