--- a/master peice/profile/Orders/orders.html
+++ b/master peice/profile/Orders/orders.html
@@ -13,7 +13,7 @@
     <!-- header section start -->
     <header class="header">
         <div class="logo">
-            <a href="/index.html"><img src="./img/logo/lynx22-removebg-preview.png" alt=""></a>
+            <a href="/index.html"><img src="/img/logo/lynx22-removebg-preview.png" alt=""></a>
         </div>
         <nav>
             <ul id="nav1">
@@ -54,7 +54,7 @@
         <section class="footer">
             <div class="footer-row">
                 <div class="footer-col">
-                    <img src="/img/logo/lynx22-removebg-preview.png" alt="">
+                    <img src="/img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
                     <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse excepturi
                         ducimus quasi mollitia minima harum!</p>
                     <span><i class="fa-solid fa-phone"></i>+962 78 967 1075</span>
