--- a/master peice/profile/OrdersRenter/OrdersRenter.html
+++ b/master peice/profile/OrdersRenter/OrdersRenter.html
@@ -13,7 +13,7 @@
     <!-- header section start -->
     <header class="header">
         <div class="logo">
-            <a href="/index.html"><img src="./img/logo/lynx22-removebg-preview.png" alt=""></a>
+            <a href="/index.html"><img src="/img/logo/lynx22-removebg-preview.png" alt=""></a>
         </div>
         <nav>
             <ul id="nav1">
