--- a/master peice/SingleCar/SingleCar.html
+++ b/master peice/SingleCar/SingleCar.html
@@ -61,7 +61,7 @@
                     <h3>Price</h3>
                 </div>
                 <div>
-                    <p><span class="cost" id="pricePerDay">100.00</span>/Day</p>
+                    <p><span class="cost" id="pricePerDay">100.00</span>JD/Day</p>
                 </div>
             </div>
             <div>
