--- a/master peice/profile/profile.html
+++ b/master peice/profile/profile.html
@@ -17,7 +17,7 @@
         </div>
         <nav>
             <ul id="nav1">
-                <li class="active"><a href="/index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/shop/shop.html">Book Now</a>
                     <i class="fa-solid fa-chevron-down" style="color: #000000; font-size: 0.7rem;"></i>
                     <ul class="drop-down">
