--- a/master peice/signUp/signUp.html
+++ b/master peice/signUp/signUp.html
@@ -27,7 +27,7 @@
                 <li><a href="/About us/Aboutus.html">About us</a></li>
                 <li><a href="/Contact Us/Contactus.html">Contact us</a></li>
                 <li id="addBtn"><a href="/signUp/signUp.html">Sign Up</a></li>
-                <li><a href="/login/login.html">Login</a></li>
+                <li id="loginbtn"><a href="/login/login.html">Login</a></li>
             </ul>
 
         </nav>
@@ -92,7 +92,7 @@
         </div>
 
     </section>
-
+    <script src="/Rolecheck.js"></script>
     <script src="signUp.js"></script>
 </body>
 
