--- a/master peice/Renter/renter.html
+++ b/master peice/Renter/renter.html
@@ -71,18 +71,22 @@
         <form id="carForm" enctype="multipart/form-data">
                    
             <label for="carName">BrandName:</label>
-            <select id="brands" name="BrandName"></select>
+            <select id="brands" name="BrandName">
+            <option value="">Choose</option>    
+            </select>
 
             
 
             <label for="transmission">Transmission:</label>
             <select id="transmission" name="transmission" required>
+                <option value="">Choose</option>
                 <option value="automatic">Automatic</option>
                 <option value="manual">Manual</option>
             </select>
 
             <label for="fuelType">Fuel Type:</label>
             <select id="fuelType" name="fuelType" required>
+                <option value="">Choose</option>
                 <option value="gas">Gas</option>
                 <option value="electric">Electric</option>
                 <option value="hybrid">Hybrid</option>
@@ -90,7 +94,9 @@
             </select>
 
             <label for="location">Location:</label>
-            <select id="location"></select>
+            <select id="location" required>
+             <option value="">Choose</option>
+            </select>
 
             <label for="driver">Driver:</label>
             <select id="driver" name="driver" required>
@@ -99,7 +105,7 @@
             </select>
 
             <label for="cost">Cost Per Day:</label>
-            <input type="number" id="cost" placeholder="should inter a number">
+            <input type="number" id="cost" placeholder="should inter a number" required>
 
             <label for="carImage">Car Image:</label>
             <input type="file" id="carImage" name="files[]" multiple accept="image/*" required>
