--- a/master peice/About us/Aboutus.html
+++ b/master peice/About us/Aboutus.html
@@ -48,7 +48,7 @@
     <!-- about us -->
     <section class="section-p1" id="about1">
         <div>
-            <h2 style="font-size: 60px;margin-bottom: 8%;">About Lynx Rides</h2>
+            <h2 style="margin-bottom: 8%;">About Lynx Rides</h2>
             <p>Welcome to Lynex Rides! We offer two convenient options: explore the road on your terms with our
                 self-drive rentals or sit back and relax with our chauffeur-driven service. Our diverse fleet is
                 meticulously maintained for your comfort and safety. Experience the freedom of choice and quality
@@ -56,7 +56,7 @@
             </p>
             <a href="contact.html"><button class="viewBtn">contact us </button></a>
         </div>
-        <div><img src="/img/logo/lynx22-removebg-preview.png" width="650" alt=""></div>
+        <div><img src="/img/logo/lynx22-removebg-preview.png" alt=""></div>
     </section>
     <section id="about-head" class="section-p1">
         <img src="/img/arrivals/10.png" alt="">
