--- a/master peice/shop/shop.html
+++ b/master peice/shop/shop.html
@@ -134,9 +134,11 @@
 
 
             </div>
-
-
+            
         </div>
+        <div class="pagination" id="pagination">
+            <!-- Pagination buttons will be added dynamically here -->
+          </div>
     </section>
     <!-- footer section start -->
     <section class="footer">
