--- a/master peice/CarWdriver/CarWdriver.html
+++ b/master peice/CarWdriver/CarWdriver.html
@@ -134,9 +134,10 @@
 
 
             </div>
-
-
         </div>
+        <div class="pagination" id="pagination">
+            <!-- Pagination buttons will be added dynamically here -->
+          </div>
     </section>
     <!-- footer section start -->
     <section class="footer">
