--- a/master peice/admin2/admin/users/edit4.html
+++ b/master peice/admin2/admin/users/edit4.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/index.html">
+            <a href="../index.html">
                 <h1 class="logo-text"><span>Lynx</span>Rides</h1>
             </a>
         </div>
@@ -87,7 +87,7 @@
                         <input type="email" name="email" id="email" class="text-input">
                     </div>
                     <div>
-                       <a href="/admin2/admin/users/index.html"> <button type="submit" class="btn btn-big">Update</button></a>
+                       <a href="../admin2/admin/users/index.html"> <button type="submit" class="btn btn-big">Update</button></a>
                     </div>
                 </form>
 
