--- a/master peice/index.html
+++ b/master peice/index.html
@@ -14,23 +14,23 @@
     <!-- nav bar-section -->
     <header class="header">
         <div class="logo">
-           <a href="/index.html"><img src="./img/logo/lynx22-removebg-preview.png" alt=""></a>
+           <a href="./index.html"><img src="./img/logo/lynx22-removebg-preview.png" alt=""></a>
         </div>
         <nav>
             <ul id="nav1">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="/shop/shop.html">Book Now</a>
+                <li><a href="shop/shop.html">Book Now</a>
                     <i class="fa-solid fa-chevron-down" style="color: #000000; font-size: 0.7rem;"></i>
                     <ul class="drop-down">
-                        <span><a href="/CarWdriver/CarWdriver.html">Car with Driver</a></span>
+                        <span><a href="CarWdriver/CarWdriver.html">Car with Driver</a></span>
                     </ul>
                 </li>
-                <li><a href="/About us/Aboutus.html">About us</a></li>
-                <li id="contact"><a href="/Contact Us/Contactus.html">Contact us</a></li>
-                <li id="addBtn"><a href="/signUp/signUp.html">Sign Up</a></li>
-                <li id="loginbtn"><a href="/login/login.html">Login</a></li>
+                <li><a href="About us/Aboutus.html">About us</a></li>
+                <li id="contact"><a href="Contact Us/Contactus.html">Contact us</a></li>
+                <li id="addBtn"><a href="signUp/signUp.html">Sign Up</a></li>
+                <li id="loginbtn"><a href="login/login.html">Login</a></li>
             </ul>
-            <a href="/Renter/renter.html"></a>
+            <a href="Renter/renter.html"></a>
         </nav>
         <i class="fa-solid fa-bars" id="menu" style="color: #000000;"></i>
     </header>
@@ -45,9 +45,9 @@
                         <p>Seamless rentals, your way. Rent a car or elevate your experience with a chauffeur – enjoy
                             the journey, stress-free.</p>
                         <div class="buttons">
-                            <a href="/shop/shop.html"><button type="submit" class="AboutUs"><i
+                            <a href="shop/shop.html"><button type="submit" class="AboutUs"><i
                                         class="fa-solid fa-arrow-right"></i>Rent a Car!</button></a>
-                            <a href="/CarWdriver/CarWdriver.html"><button type="submit" class="Shop"><i
+                            <a href="CarWdriver/CarWdriver.html"><button type="submit" class="Shop"><i
                                         class="fa-solid fa-arrow-right"></i>With Driver
                                 </button></a>
                         </div>
@@ -130,7 +130,7 @@
             <p class="p1"><i class="fa-solid fa-forward-step"></i>Rent a car for self-driven freedom.</p>
             <p class="p1"><i class="fa-solid fa-forward-step"></i>Indulge in chauffeur-driven luxury.</p>
             <p class="p1"><i class="fa-solid fa-forward-step"></i>Sign up and start Earn Money!.</p>
-            <a href="/signUp/signUp.html"><button>Earn money! <i
+            <a href="signUp/signUp.html"><button>Earn money! <i
                         class="fa-solid fa-arrow-right"></i></button></a>
         </div>
     </section>
@@ -200,6 +200,6 @@
     <script src="Rolecheck.js"></script>
     <script src="index.js"></script>
 </body>
-<a href=""></a>
+
 
 </html>
