--- a/master peice/shop/shop.html
+++ b/master peice/shop/shop.html
@@ -14,21 +14,21 @@
     <!-- nav bar-section -->
     <header class="header">
         <div class="logo">
-            <a href="/index.html"><img src="/img/logo/lynx22-removebg-preview.png" alt=""></a>
+            <a href="../index.html"><img src="../img/logo/lynx22-removebg-preview.png" alt=""></a>
         </div>
         <nav>
             <ul id="nav1">
-                <li><a href="/index.html">Home</a></li>
-                <li class="active"><a href="/shop/shop.html">Book Now</a>
+                <li><a href="../index.html">Home</a></li>
+                <li class="active"><a href="../shop/shop.html">Book Now</a>
                     <i class="fa-solid fa-chevron-down" style="color: #000000; font-size: 0.7rem;"></i>
                     <ul class="drop-down">
-                        <span><a href="/CarWdriver/CarWdriver.html">Car with Driver</a></span>
+                        <span><a href="../CarWdriver/CarWdriver.html">Car with Driver</a></span>
                     </ul>
                 </li>
-                <li><a href="/About us/Aboutus.html">About us</a></li>
-                <li id="contact"><a href="/Contact Us/Contactus.html">Contact us</a></li>
-                <li id="addBtn"><a href="/signUp/signUp.html">Sign Up</a></li>
-                <li id="loginbtn"><a href="/login/login.html">Login</a></li>
+                <li><a href="../About us/Aboutus.html">About us</a></li>
+                <li id="contact"><a href="../Contact Us/Contactus.html">Contact us</a></li>
+                <li id="addBtn"><a href="../signUp/signUp.html">Sign Up</a></li>
+                <li id="loginbtn"><a href="../login/login.html">Login</a></li>
             </ul>
 
         </nav>
@@ -187,7 +187,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="/Rolecheck.js"></script>
+    <script src="../Rolecheck.js"></script>
     <script src="shop.js"></script>
 </body>
 
